--- a/working_with_time_series_data.ipynb
+++ b/working_with_time_series_data.ipynb
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "66b27401-e0d3-45fa-a29f-cacc0e5f5159",
    "metadata": {},
    "outputs": [],
@@ -1875,10 +1875,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "938cbe47-25a2-4ce5-8465-3db607993d95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Airport__Name</th>\n",
+       "      <th>Aircraft__Make_Model</th>\n",
+       "      <th>Effect__Amount_of_damage</th>\n",
+       "      <th>Flight_Date</th>\n",
+       "      <th>Aircraft__Airline_Operator</th>\n",
+       "      <th>Origin_State</th>\n",
+       "      <th>When__Phase_of_flight</th>\n",
+       "      <th>Wildlife__Size</th>\n",
+       "      <th>Wildlife__Species</th>\n",
+       "      <th>When__Time_of_day</th>\n",
+       "      <th>Cost__Other</th>\n",
+       "      <th>Cost__Repair</th>\n",
+       "      <th>Cost__Total_$</th>\n",
+       "      <th>Speed_IAS_in_knots</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BARKSDALE AIR FORCE BASE ARPT</td>\n",
+       "      <td>T-38A</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1/8/90 0:00</td>\n",
+       "      <td>MILITARY</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Climb</td>\n",
+       "      <td>Large</td>\n",
+       "      <td>Turkey vulture</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BARKSDALE AIR FORCE BASE ARPT</td>\n",
+       "      <td>KC-10A</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1/9/90 0:00</td>\n",
+       "      <td>MILITARY</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Approach</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Unknown bird or bat</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BARKSDALE AIR FORCE BASE ARPT</td>\n",
+       "      <td>B-52</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1/11/90 0:00</td>\n",
+       "      <td>MILITARY</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Take-off run</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Unknown bird or bat</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>130.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NEW ORLEANS INTL</td>\n",
+       "      <td>B-737-300</td>\n",
+       "      <td>Substantial</td>\n",
+       "      <td>1/11/90 0:00</td>\n",
+       "      <td>SOUTHWEST AIRLINES</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Take-off run</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>Rock pigeon</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BARKSDALE AIR FORCE BASE ARPT</td>\n",
+       "      <td>KC-10A</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1/12/90 0:00</td>\n",
+       "      <td>MILITARY</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Climb</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Unknown bird or bat</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Airport__Name Aircraft__Make_Model  \\\n",
+       "0  BARKSDALE AIR FORCE BASE ARPT                T-38A   \n",
+       "1  BARKSDALE AIR FORCE BASE ARPT               KC-10A   \n",
+       "2  BARKSDALE AIR FORCE BASE ARPT                 B-52   \n",
+       "3               NEW ORLEANS INTL            B-737-300   \n",
+       "4  BARKSDALE AIR FORCE BASE ARPT               KC-10A   \n",
+       "\n",
+       "  Effect__Amount_of_damage   Flight_Date Aircraft__Airline_Operator  \\\n",
+       "0                     None   1/8/90 0:00                   MILITARY   \n",
+       "1                     None   1/9/90 0:00                   MILITARY   \n",
+       "2                     None  1/11/90 0:00                   MILITARY   \n",
+       "3              Substantial  1/11/90 0:00         SOUTHWEST AIRLINES   \n",
+       "4                     None  1/12/90 0:00                   MILITARY   \n",
+       "\n",
+       "  Origin_State When__Phase_of_flight Wildlife__Size    Wildlife__Species  \\\n",
+       "0    Louisiana                 Climb          Large       Turkey vulture   \n",
+       "1    Louisiana              Approach         Medium  Unknown bird or bat   \n",
+       "2    Louisiana          Take-off run         Medium  Unknown bird or bat   \n",
+       "3    Louisiana          Take-off run          Small          Rock pigeon   \n",
+       "4    Louisiana                 Climb         Medium  Unknown bird or bat   \n",
+       "\n",
+       "  When__Time_of_day  Cost__Other  Cost__Repair  Cost__Total_$  \\\n",
+       "0               Day            0             0              0   \n",
+       "1             Night            0             0              0   \n",
+       "2               Day            0             0              0   \n",
+       "3               Day            0             0              0   \n",
+       "4               Day            0             0              0   \n",
+       "\n",
+       "   Speed_IAS_in_knots  \n",
+       "0               300.0  \n",
+       "1               200.0  \n",
+       "2               130.0  \n",
+       "3               140.0  \n",
+       "4               160.0  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = data.birdstrikes()\n",
     "df.head()"
